<resources>
    <string name="app_name">game_mao2</string>
    <string name="begin">开启毛主席诗词之旅</string>
    <string name="user_name1">用户名</string>
    <string name="user_password1">密码</string>
    <string name="user_name">请输入用户名</string>
    <string name="user_password">请输入密码</string>
    <string name="btn_login">登录</string>
    <string name="img_mao">毛泽东图片</string>
    <string name="welcome_mao_detail1">&#160; &#160; &#160; &#160; 毛泽东（1893年12月26日-1976年9月9日），字润之，笔名子任。湖南湘潭人。中国人民的领袖，马克思主义者，伟大的无产阶级革命家、战略家和理论家，中国共产党、中国人民解放军和中华人民共和国的主要缔造者和领导人，诗人，书法家。</string>
    <string name="welcome_mao_detail2">&#160; &#160; &#160; &#160; 中国精神是毛泽东诗词的精髓，如一根红线贯穿其中。毛泽东诗词反映了特定时期中华民族的理性、情感、思维、行为和价值取向，已经转化为赋有价值形式的文化符号，汇入到中华民族的精神长河。</string>
    <string name="btn_mao">开启毛主席诗词之旅</string>
    <string name="text_welcome">欢迎登录</string>
    <string name="text_sign">没有账号？去注册</string>
    <string name="text_sign1">注册</string>
    <string name="audio">语音识别</string>

    <string name="text_round">毛主席诗词之旅</string>
    <string name="btn_q1">关卡1</string>
    <string name="btn_q2">关卡2</string>
    <string name="btn_q3">关卡3</string>
    <string name="btn_q4">关卡4</string>
    <string name="btn_q5">关卡5</string>

    <string name="round1_title">欢迎来到关卡1</string>
    <string name="round2_title">欢迎来到关卡2</string>
    <string name="round3_title">欢迎来到关卡3</string>
    <string name="round4_title">欢迎来到关卡4</string>
    <string name="round5_title">欢迎来到关卡5</string>

    <string name="round1_detail">&#160; &#160; &#160; &#160;《沁园春·雪》上片描写北国壮丽的雪景，纵横千万里，展示了大气磅礴、旷达豪迈的意境，抒发了词人对祖国壮丽河山的热爱。下片议论抒情，重点评论历史人物，歌颂当代英雄，抒发无产阶级要做世界的真正主人的豪情壮志。</string>
    <string name="round2_detail">&#160; &#160; &#160; &#160;《采桑子·重阳》通过重阳述怀，表达了诗人对革命根据地和革命战争的赞美之情；表达了革命的人生观、世界观；表达了诗人宽广的胸襟和高度的革命乐观主义精神。整首词写得鲜明爽朗、气度恢弘，有着鼓舞人心的巨大力量。</string>
    <string name="round3_detail">&#160; &#160; &#160; &#160;《七律·人民解放军占领南京》尾联阐明了历史发展的必然规律，对全诗的思想做出哲理性的总结。全诗表现了人民解放军彻底打垮国民党反动派的信心和决心，表达了诗人解放全中国的必胜信念，格调雄伟，气势磅礴，雄壮有力。</string>
    <string name="round4_detail">&#160; &#160; &#160; &#160;《沁园春·长沙》是近代诗人毛泽东所写的一首词。该词通过对长沙秋景的描绘和对青年时代革命斗争生活的回忆，抒写出革命青年对国家命运的感慨和以天下为己任，蔑视反动统治者，改造旧中国的豪情壮志。全词在片语之间，融情入理，情景交融。</string>
    <string name="round5_detail">&#160; &#160; &#160; &#160;1934年10月，中国工农红军为粉碎国民政府的围剿，挽救民族危亡，从江西瑞金出发，开始了举世闻名的长征。这首七律是作于红军战士越过岷山后，长征即将胜利结束前不久的途中。作为红军的领导人，毛泽东在经受了无数次考验后，胜利在望，他心潮澎湃，满怀豪情地写下了这首壮丽的诗篇。</string>

    <string name="round_huida">请回答问题</string>
    <string name="text_q11">\"江山如此多娇\"的下一句是：</string>
    <string name="text_answerhint">请输入下一句诗词</string>
    <string name="text_answersure">确认提交</string>

    <string name="text_q21">\"人生易老天难老，岁岁重阳。\"的下一句是：</string>
    <string name="text_q22">今又重阳，战地黄花分外香</string>

    <string name="text_q31">\"天若有情天亦老\"的下一句是：</string>
    <string name="text_q32">人间正道是沧桑</string>

    <string name="text_q41">\"恰同学少年， 风华正茂\"的下一句是：</string>
    <string name="text_q42">书生意气， 挥斥方遒</string>

    <string name="text_q51">\"红军不怕远征难\"的下一句是：</string>
    <string name="text_q52">万水千山只等闲</string>
    <string name="text_login_username">用户名：</string>
    <string name="text_login_psw"><![CDATA[密    码：]]></string>
    <string name="cb_isRemember">记住密码</string>
</resources>
