<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b17"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/img_mao"
        android:layout_width="394dp"
        android:layout_height="192dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/img_mao"
        app:srcCompat="@drawable/mao" />

    <TextView
        android:id="@+id/text_mao_detail1"
        android:layout_width="340dp"
        android:layout_height="154dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/qingkebenyuesong"
        android:foregroundTint="#00090808"
        android:text="@string/welcome_mao_detail1"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/text_mao_detail2"
        android:layout_width="342dp"
        android:layout_height="132dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/qingkebenyuesong"
        android:text="@string/welcome_mao_detail2"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_welcome"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:background="@drawable/yuanjiao_button"
        android:fontFamily="@font/qingkebenyuesong"
        android:text="@string/btn_mao"
        android:textColor="#605f5f"
        android:textSize="28sp" />

</LinearLayout>